Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ build:
   - cd build
   - cmake -S ../ -B ./
   - cmake --build ./
+  - mkdir ../artifacts
+  - cp ./tps/tp* ../artifacts/
   artifacts:
     paths:
-      - ./tps/tp*
+      - artifacts
