Added rule so that gitlab web IDE commits will not trigger CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,8 @@ before_script:
   - apt-get install --yes libglew-dev
 
 build:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE != "webide"'
   script:
   - cp override_pmp_files/SurfaceMeshGL.cpp externals/pmp-library/src/pmp/visualization/SurfaceMeshGL.cpp
   - cp override_pmp_files/SurfaceSmoothing.h externals/pmp-library/src/pmp/algorithms/SurfaceSmoothing.h
