--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,14 +17,6 @@ before_script:
   - apt-get install --yes libglew-dev
 
 build:
-  only:
-    changes:
-      - CMakeLists.txt
-      - tps/CMakeLists.txt
-      - tps/include/*
-      - tps/src/*
-      - tps/apps/*
-      - tps/corrections/**
   script:
   - cp override_pmp_files/SurfaceMeshGL.cpp externals/pmp-library/src/pmp/visualization/SurfaceMeshGL.cpp
   - cp override_pmp_files/SurfaceSmoothing.h externals/pmp-library/src/pmp/algorithms/SurfaceSmoothing.h
@@ -40,6 +32,16 @@ build:
   - cmake --build ./
   - mkdir ../artifacts
   - cp ./tps/tp* ../artifacts/
+  only:
+    refs:
+      - branches
+    changes:
+      - CMakeLists.txt
+      - tps/CMakeLists.txt
+      - tps/include/*
+      - tps/src/*
+      - tps/apps/*
+      - tps/corrections/**
   artifacts:
     paths:
       - ./tps/corrections/bin/
