--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: alpine
 
 pages:
   script:
-    - apk update && apk add doxygen
+    - apk update && apk add doxygen && apk add graphviz
     - doxygen doc/Doxyfile
     - mv doc/html/ public/
   artifacts:
