--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,15 @@
 project(skeleton
         VERSION 1.0
-        DESCRIPTION "skeleton project test build"
+        DESCRIPTION "Skeleton Project"
         LANGUAGES CXX)
 
 add_executable(${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME} ${LINK_EXTERNAL_LIBRARIES})
 target_sources(${PROJECT_NAME}
                PRIVATE
-               cli_tools.h
-               cli_tools.cpp
-               SkeletonMeshViewer.h
-               SkeletonMeshViewer.cpp
+               Skeletizator.h
+               Skeletizator.cpp
+               SkeletonViewer.h
+               SkeletonViewer.cpp
                main.cpp  
                )
